--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px #3ea6ff;
+    border-bottom: solid 2px rgb(255, 132, 132);
     padding: 20px;
     font-size: 32px;
-    color: #3ea6ff;
+    color: blue;
 }
 
 .chamada {
-    background: #b89cd5;
+    background: #89cff0;
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -49,7 +49,7 @@ img {
 
 .categoria-filmes img:hover {
     opacity: 1.0;
-    border: 1px solid green;
+    border: 1px solid white;
 }
 
 .categoria {
